# monorepo-template

./: .gitignore  LICENSE  README.md
backends/: .dev.env.example  .gitignore  README.md  alembic.ini  docker-compose.yml  mypy.ini  pyproject.toml  workspace.toml
backends/bases/backends/greet_api/: core.py
backends/bases/backends/message_api/: __init__.py  core.py
backends/components/backends/databases/: __init__.py  core.py  mixin.py
backends/components/backends/databases/message/: crud.py  models.py
backends/components/backends/logs/: __init__.py  core.py
backends/components/backends/messages/: __init__.py  core.py
backends/components/backends/schemas/: __init__.py  message.py
backends/components/backends/settings/: __init__.py  core.py
backends/migrations/: Dockerfile  env.py
backends/migrations/versions/: 7f3d0b2465fd_create_messages.py
backends/projects/greet_api_project/: Dockerfile  pyproject.toml
backends/projects/message_api_project/: Dockerfile  pyproject.toml
backends/scripts/: build.py
backends/test/bases/backends/greet_api/: test_core.py
backends/test/bases/backends/message_api/: test_core.py
backends/test/components/backends/databases/: test_core.py
backends/test/components/backends/logs/: test_core.py
backends/test/components/backends/messages/: test_core.py
backends/test/components/backends/schemas/: test_core.py
backends/test/components/backends/settings/: test_core.py
