[project]
name = "backends"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "rashwalt", email = "foxbland@gmail.com" }
]
dependencies = [
    "fastapi>=0.111.1",
    "uvicorn>=0.30.3",
    "pydantic-settings>=2.3.4",
    "sqlalchemy>=2.0.31",
    "pymysql>=1.1.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "polylith-cli>=1.10.0",
    "mypy>=1.11.0",
    "pytest>=8.3.2",
    "ruff>=0.5.5",
    "alembic>=1.13.2",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build]
dev-mode-dirs = ["components", "bases", "development", "."]

[tool.polylith.bricks]
"bases/backends/greet_api" = "backends/greet_api"
"bases/backends/message_api" = "backends/message_api"
"components/backends/logs" = "backends/logs"
"components/backends/messages" = "backends/messages"
"components/backends/schemas" = "backends/schemas"
"components/backends/settings" = "backends/settings"
"components/backends/databases" = "backends/databases"

[tool.rye.scripts]
dev = { chain = ["clean-build", "reup"] }
q-dev = { chain = ["build", "up"] }
build = "python scripts/build.py"
clean-build = "python scripts/build.py --clean"
up = "docker-compose up -d"
reup = "docker-compose up -d --build"
down = "docker-compose down --rmi all"

[tool.ruff]
exclude = [
  ".git",
  ".github",
  "__pycache__",
  ".mypy_cache",
  ".ruff_cache",
  "dist",
  ".venv",
  "./development/*.py",
  "./migrations/*.py",
]
line-length = 120
src = ["components", "bases", "development", "."]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP"]
ignore = ["E501", "B008", "C901", "W191", "B904"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.lint.isort]
combine-as-imports = true
force-sort-within-sections = true
known-third-party = ["django", "fastapi", "pydantic", "starlette"]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]
split-on-trailing-comma = true
lines-after-imports = 2
order-by-type = false
